--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,39 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span>&nbsp;{{title}}</span></a>
+        <a class="navbar-brand" [routerLink]=" ['/'] "><span>{{title}}</span></a>
+      </div>
+      <div *ngIf="loginService.isSignedIn()">
+        <div class="collapse navbar-collapse" id="navbar-ex-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a [routerLink]=" ['/main'] "><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Home</a>
+            </li>
+            <li>
+              <a [routerLink]=" ['/data'] "><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;Data</a>
+            </li>
+            <li>
+              <a [routerLink]=" ['/logout']" id="logout"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>&nbsp;Logout</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div *ngIf="!loginService.isSignedIn()">
+        <div class="collapse navbar-collapse" id="navbar-ex-collapse2">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a [routerLink]=" ['/register'] "><span class="glyphicon glyphicon-pencil" aria-hidden="true" id="register"></span>&nbsp;Register</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
+  <notification-alert></notification-alert>
+  <div class="well">
+    <main>
+      <router-outlet></router-outlet>
+    </main>
+  </div>
+  <app-footer></app-footer>
 </div>
