--- a/src/app/components/logAlert/logAlert.html
+++ b/src/app/components/logAlert/logAlert.html
@@ -1,3 +1,3 @@
 <div>
-    <p-toast [style]="{marginTop: '80px'}" (onClose)="onToastClose()"></p-toast>
+    <p-toast [style]="{marginTop: '80px'}" (onClose)="onToastClose($event.message)" [attr.id]="toastAlert.id"></p-toast>
 </div>
