Add e2e test and Karma config

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" [routerLink]=" ['/'] "><span>{{title}}</span></a>
+        <a class="navbar-brand" [routerLink]=" ['/'] "><span id="title">{{title}}</span></a>
       </div>
       <div *ngIf="loginService.isSignedIn()">
         <div class="collapse navbar-collapse" id="navbar-ex-collapse">
